# rust8

./: Cargo.toml  README.md
.github/workflows/: publish.yaml
src/: lib.rs
src/chip8/: constants.rs  data_register.rs  keyboard.rs  memory.rs  mod.rs
src/chip8/cpu/: execute.rs  mod.rs
src/chip8/graphic/: mod.rs  pixel.rs  pixel_view.rs  screen.rs
src/chip8/instruction/: mod.rs  parser.rs
